fix horizontal scrollbar

--- a/client/app.scss
+++ b/client/app.scss
@@ -38,7 +38,7 @@ button.buy, button.done {
 }
 
 // our animation
-#app {
+body {
 	overflow-x: hidden;
 }
 
